--- a/addons/auth_oauth/views/auth_oauth_templates.xml
+++ b/addons/auth_oauth/views/auth_oauth_templates.xml
@@ -7,7 +7,7 @@
         </template>
 
         <template id="providers" name="OAuth Providers">
-            <t t-if="len(providers) &gt; 0">
+            <t t-if="providers and len(providers) &gt; 0">
                 <em t-attf-class="d-block text-center text-muted small my-#{len(providers) if len(providers) &lt; 3 else 3}">- or -</em>
                 <div class="o_auth_oauth_providers list-group mt-1 mb-1 text-left">
                     <a t-foreach="providers" t-as="p" class="list-group-item list-group-item-action py-2" t-att-href="p['auth_link']">
@@ -20,7 +20,7 @@
 
         <template id="login" inherit_id="web.login" name="OAuth Login buttons">
             <xpath expr="//form" position="before">
-                <t t-set="form_small" t-value="True" t-if="len(providers) &gt; 2"/>
+                <t t-set="form_small" t-value="True" t-if="providers and len(providers) &gt; 2"/>
             </xpath>
             <xpath expr="//div[hasclass('o_login_auth')]" position="inside">
                 <t t-call="auth_oauth.providers"/>
